waypoint and agent compiles

--- a/CrowdSimulation/Libpedsim/Libpedsim.vcxproj.filters
+++ b/CrowdSimulation/Libpedsim/Libpedsim.vcxproj.filters
@@ -32,9 +32,6 @@
     <ClCompile Include="src\ped_waipoints.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\coordinate_collection.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\ped_agent_collection.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -58,11 +55,6 @@
     <ClInclude Include="src\ped_waypoints.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\ped_agent_collection.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\ped_coordinate_collection.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
+    <ClInclude Include="src\ped_agent_collection.h" />
   </ItemGroup>
 </Project>
